creusot/tests/should_fail/recursion/complicated_traits.stderr
error: Mutually recursive functions: when calling <i32 as Foo>::foo...
  --> complicated_traits.rs:10:5
   |
10 |     fn foo() {
   |     ^^^^^^^^
   |
note: then <i32 as Foo>::foo calls bar...
  --> complicated_traits.rs:11:9
   |
11 |         bar::<std::iter::Once<i32>>(std::iter::once(1i32));
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: finally bar calls <i32 as Foo>::foo.
  --> complicated_traits.rs:21:9
   |
21 |         I::Item::foo();
   |         ^^^^^^^^^^^^^^

error: aborting due to 1 previous error

